--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,19 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui-treasury/components": "^1.10.1",
+    "@mui-treasury/styles": "^1.13.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "clsx": "^1.1.1",
     "jwt-decode": "^3.1.2",
     "material-ui-chip-input": "^1.1.0",
     "moment": "^2.27.0",
+    "qs": "^6.10.1",
     "react": "^16.12.0",
+    "react-avatar-edit": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
@@ -23,6 +28,7 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^7.0.4",
     "react-usestateref": "^1.0.5",
+    "reading-time-estimator": "^1.3.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
